# CrewAIAgent

./: README.md
PDF_RAG_CrewAI/: 1_crew.py
PDF_RAG_CrewAI/pdf_rag_crewai/: README.md  pyproject.toml
PDF_RAG_CrewAI/pdf_rag_crewai/db/: chroma.sqlite3
PDF_RAG_CrewAI/pdf_rag_crewai/src/: 1_crew.py  test.py
PDF_RAG_CrewAI/pdf_rag_crewai/src/pdf_rag_crewai/: crew.py  main.py
agentcrew/: README.md  pyproject.toml
agentcrew/src/agentcrew/: crew.py  main.py
